refactor(mass): 优化代码结构并实现屋顶板派生功能
- 移除未使用的导入语句 BlockPatch 和 BlockPos
- 简化条件判断逻辑，提高代码可读性
- 使用 getFirst() 替代 get(0) 获取列表首元素
- 添加 MassToAxisConstraintDeriver 类，实现轴线约束派生功能
- 添加 MassToRoofPlateDeriver 类，实现从体量派生屋顶板功能
- 重构 RoofPlateGenerator 中的条件判断语句
- 更新 StructuralSkeleton 构造函数，集成屋顶板和轴线约束
- 简化 Socket 过滤操作，使用 toList() 替代 collect(Collectors.toList())
- 优化随机跳过 Socket 的代码结构